--- a/index.html
+++ b/index.html
@@ -942,10 +942,10 @@
                 <div class="callback">
                     <h3 class="callback__heading">Шоурум №4</h3>
                     <address class="callback__address">Леонтьевский переулок, дом 5, строение 1</address>
-                    <form action="POST" class="callback__form desktop">
+                    <form action="https://jsonplaceholder.typicode.com/posts" method="POST" class="callback__form desktop">
                         <h3 class="content-heading">Заказать обратный звонок</h3>
-                        <input type="text" name="" class="callback__input" placeholder="Имя*">
-                        <input type="phone" name="" class="callback__input" placeholder="Телефон*">
+                        <input type="text" name="name" class="callback__input" placeholder="Имя*">
+                        <input type="phone" name="phone" class="callback__input" placeholder="Телефон*">
                         <button class="button button__callback">Заказать</button>
                     </form>
                     <div class="fast-contact desktop">
@@ -957,10 +957,10 @@
                     </div>
                 </div>
                 <div id="map"></div>
-                <form action="POST" class="callback__form mobile__320">
+                <form action="https://jsonplaceholder.typicode.com/posts" method="POST" class="callback__form mobile__320">
                     <h3 class="content-heading">Заказать обратный звонок</h3>
-                    <input type="text" name="" class="callback__input" placeholder="Имя*">
-                    <input type="phone" name="" class="callback__input" placeholder="Телефон*">
+                    <input type="text" name="name" class="callback__input" placeholder="Имя*">
+                    <input type="phone" name="phone" class="callback__input" placeholder="Телефон*">
                     <button class="button button__callback">Заказать</button>
                 </form>
                 <div class="fast-contact mobile__320">
