--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="logo"><a href=""><img src="content_img/logo.svg" alt=""></a></div>
+                <div class="logo"><a href="" aria-label="logo"><img src="content_img/logo.svg" alt=""></a></div>
                 <nav class="navigation">
                     <ul class="navigation__list">
                         <li class="navigation__item"><a href="" class="navigation__link">О нас</a></li>
@@ -96,7 +96,7 @@
             <div class="container header-container">
                 <nav class="product-nav">
                     <ul class="product-nav__list">
-                        <li class="product-nav__item" tabindex="0">
+                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Реализм">
                             <div class="product-nav__header">Реализм<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
@@ -111,7 +111,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0">
+                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Импрессионизм">
                             <div class="product-nav__header">Импрессионизм<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
@@ -126,7 +126,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0">
+                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Постимпрессионизм">
                             <div class="product-nav__header">Постимпрессионизм<span class="product-nav__arrow"></span>
                             </div>
                             <div class="popup__menu popup__menu-disabled">
@@ -143,7 +143,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0">
+                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Авангард">
                             <div class="product-nav__header">Авангард<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
@@ -158,7 +158,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0">
+                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Футуризм">
                             <div class="product-nav__header">Футуризм<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
