--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     </div>
                     <ul class="catalog-content__subjectList" id="accordion">
                         <li class="catalog-content__subjectItem">
-                            <h3>C 1400 по 1499 гг.</h3>
+                            <h3><div class="accordion_header">C 1400 по 1499 гг.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -409,7 +409,7 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3>C 1500 по 1599 гг.</h3>
+                            <h3><div class="accordion_header">C 1500 по 1599 гг.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -440,7 +440,7 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3>C 1600 по 1699 гг.</h3>
+                            <h3><div class="accordion_header">C 1600 по 1699 гг.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -471,7 +471,7 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3>C 1700 по 1799 гг.</h3>
+                            <h3><div class="accordion_header">C 1700 по 1799 гг.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -502,7 +502,7 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3>C 1800 по 1899 гг.</h3>
+                            <h3><div class="accordion_header">C 1800 по 1899 гг.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -533,7 +533,7 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3>C 1900 по 1999 гг.</h3>
+                            <h3><div class="accordion_header">C 1900 по 1999 гг.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -564,7 +564,7 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3>C 2000 г.</h3>
+                            <h3><div class="accordion_header">C 2000 г.</div></h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item">Бенедетто ди Биндо</li>
@@ -944,8 +944,8 @@
                         </div>
                         <!-- If we need navigation buttons -->
                     </div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev project__button-prev"></div>
+                    <div class="swiper-button-next project__button-next"></div>
                 </div>
             </div>
         </section>
