--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                 <div class="callback">
                     <h3 class="callback__heading">Шоурум №4</h3>
                     <address class="callback__address">Леонтьевский переулок, дом 5, строение 1</address>
-                    <form action="#" class="callback__form desktop">
+                    <form action="#" class="callback__form desktop" method="POST">
                         <h3 class="content-heading">Заказать обратный звонок</h3>
                         <div class="validate-input">
                             <input type="text" data-validate-field="name" name="name" class="callback__input"
