--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                 <div class="callback">
                     <h3 class="callback__heading">Шоурум №4</h3>
                     <address class="callback__address">Леонтьевский переулок, дом 5, строение 1</address>
-                    <form action="#" class="callback__form desktop" method="POST">
+                    <form action="/mail.php" class="callback__form desktop" method="POST" onSubmit="window.location.reload()">
                         <h3 class="content-heading">Заказать обратный звонок</h3>
                         <div class="validate-input">
                             <input type="text" data-validate-field="name" name="name" class="callback__input"
@@ -975,8 +975,8 @@
                     </div>
                 </div>
                 <div id="map"></div>
-                <form action="https://jsonplaceholder.typicode.com/posts" method="POST"
-                    class="callback__form mobile__320 callback__form320">
+                <form action="/mail.php" method="POST"
+                    class="callback__form mobile__320 callback__form320" onSubmit="window.location.reload()">
                     <h3 class="content-heading">Заказать обратный звонок</h3>
                     <div class="validate-input">
                         <input type="text" data-validate-field="name" name="name" class="callback__input"
