last final all work

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-    <!-- <link rel="stylesheet" href="css/justValidateTooltip.min.css"> -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -111,7 +110,8 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Импрессионизм">
+                        <li class="product-nav__item" tabindex="0" role="menu"
+                            aria-label="меню из 4 элементов Импрессионизм">
                             <div class="product-nav__header">Импрессионизм<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
@@ -126,7 +126,8 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Постимпрессионизм">
+                        <li class="product-nav__item" tabindex="0" role="menu"
+                            aria-label="меню из 4 элементов Постимпрессионизм">
                             <div class="product-nav__header">Постимпрессионизм<span class="product-nav__arrow"></span>
                             </div>
                             <div class="popup__menu popup__menu-disabled">
@@ -143,7 +144,8 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Авангард">
+                        <li class="product-nav__item" tabindex="0" role="menu"
+                            aria-label="меню из 4 элементов Авангард">
                             <div class="product-nav__header">Авангард<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
@@ -158,7 +160,8 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="product-nav__item" tabindex="0" role="menu" aria-label="меню из 4 элементов Футуризм">
+                        <li class="product-nav__item" tabindex="0" role="menu"
+                            aria-label="меню из 4 элементов Футуризм">
                             <div class="product-nav__header">Футуризм<span class="product-nav__arrow"></span></div>
                             <div class="popup__menu popup__menu-disabled">
                                 <ul class="product-nav__menuList">
@@ -351,9 +354,12 @@
                 <div class="section-catalog__container">
                     <h2 class="section-heading">Каталог</h2>
                     <ul class="language-pack__list">
-                        <li class="language-pack__item"><span class="language-country" id="FRA" tabindex="0"></span></li>
-                        <li class="language-pack__item"><span class="language-country" id="DEU" tabindex="0"></span></li>
-                        <li class="language-pack__item"><span class="language-country" id="ITA" tabindex="0"></span></li>
+                        <li class="language-pack__item"><span class="language-country" id="FRA" tabindex="0"></span>
+                        </li>
+                        <li class="language-pack__item"><span class="language-country" id="DEU" tabindex="0"></span>
+                        </li>
+                        <li class="language-pack__item"><span class="language-country" id="ITA" tabindex="0"></span>
+                        </li>
                         <li class="language-pack__item language-pack__item-active"><span class="language-country"
                                 id="RUS"></span></li>
                         <li class="language-pack__item"><span class="language-country" id="BEL"></span></li>
@@ -378,7 +384,9 @@
                     </div>
                     <ul class="catalog-content__subjectList" id="accordion">
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 1400 по 1499 гг.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 1400 по 1499 гг.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -409,7 +417,9 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 1500 по 1599 гг.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 1500 по 1599 гг.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -440,7 +450,9 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 1600 по 1699 гг.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 1600 по 1699 гг.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -471,7 +483,9 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 1700 по 1799 гг.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 1700 по 1799 гг.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -502,7 +516,9 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 1800 по 1899 гг.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 1800 по 1899 гг.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -533,7 +549,9 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 1900 по 1999 гг.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 1900 по 1999 гг.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -564,7 +582,9 @@
                             </div>
                         </li>
                         <li class="catalog-content__subjectItem">
-                            <h3><div class="accordion_header">C 2000 г.</div></h3>
+                            <h3>
+                                <div class="accordion_header">C 2000 г.</div>
+                            </h3>
                             <div>
                                 <ul class="catalog-content__list">
                                     <li class="catalog-content__item" tabindex="0">Бенедетто ди Биндо</li>
@@ -957,14 +977,14 @@
                 <div class="callback">
                     <h3 class="callback__heading">Шоурум №4</h3>
                     <address class="callback__address">Леонтьевский переулок, дом 5, строение 1</address>
-                    <form action="/mail.php" class="callback__form desktop" method="POST" onSubmit="window.location.reload()">
+                    <form action="#" class="callback__form desktop" method="POST">
                         <h3 class="content-heading">Заказать обратный звонок</h3>
                         <div class="validate-input">
                             <input type="text" data-validate-field="name" name="name" class="callback__input"
                                 placeholder="Имя*">
                         </div>
                         <input type="tel" name="phone" class="callback__input" placeholder="Телефон*">
-                        <button class="button button__callback">Заказать</button>
+                        <button type="submit" class="button button__callback">Заказать</button>
                     </form>
                     <div class="fast-contact desktop">
                         <h3 class="content-heading">Связаться в один клик</h3>
@@ -975,15 +995,14 @@
                     </div>
                 </div>
                 <div id="map"></div>
-                <form action="/mail.php" method="POST"
-                    class="callback__form mobile__320 callback__form320" onSubmit="window.location.reload()">
+                <form action="#" class="callback__form mobile__320 callback__form320" method="POST">
                     <h3 class="content-heading">Заказать обратный звонок</h3>
                     <div class="validate-input">
                         <input type="text" data-validate-field="name" name="name" class="callback__input"
                             placeholder="Имя*">
                     </div>
                     <input type="tel" name="phone" class="callback__input" placeholder="Телефон*">
-                    <button class="button button__callback">Заказать</button>
+                    <button type="submit" class="button button__callback">Заказать</button>
                 </form>
                 <div class="fast-contact mobile__320">
                     <h3 class="content-heading">Связаться в один клик</h3>
